# W4D3_misogi_assignment

q1_discord_mcp/: README.md  discord_client.py  main.py  models.py  pyproject.toml
q2_playiarism_detector/: README.md
q2_playiarism_detector/backend/: main.py  requirements.txt
q2_playiarism_detector/frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
q2_playiarism_detector/frontend/src/app/: globals.css  layout.tsx  page.tsx
q2_playiarism_detector/frontend/src/app/auth/: page.tsx
q2_playiarism_detector/frontend/src/components/: AuthForm.tsx  NavBar.tsx  ProductCard.tsx
q2_playiarism_detector/frontend/src/lib/: api.ts
q3_chunking_statergy/: README.md
q3_chunking_statergy/backend/: chunking.py  embedding.py  main.py  utils.py
q3_chunking_statergy/frontend/: app.py
